<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mayuresh.com.retrofitjson.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        android:weightSum="100">

        <EditText
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="75"
            android:textSize="15sp"
            android:hint="@string/layout_hint_type_a_listing"
            android:layout_gravity="bottom"
            android:textAlignment="center"
            android:id="@+id/inputListingName"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="30"
            android:text="@string/layout_refresh"
            android:layout_gravity="center"
            android:gravity="center"
            android:id="@+id/btnRefreshListing"/>

    </LinearLayout>

    <ListView
        android:layout_below="@+id/linearLayout"
        android:layout_above="@+id/linearLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayoutBottom"
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">


        <Button
            android:id="@+id/btnPrevious"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="50"
            android:text="@string/layout_previous"
            android:layout_gravity="center"
            android:gravity="center"
            android:enabled="false"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="50"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/layout_next"
            android:enabled="false"/>


    </LinearLayout>

</RelativeLayout>
