<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/commentsHeadingRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:id="@+id/postThumbnail"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/postThumbnail"
                android:layout_marginLeft="10dp">

                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/postTitle"
                    android:layout_marginTop="3dp"
                    android:text="@string/layout_comment"
                    android:gravity="left"/>

                <TextView
                    android:textSize="10sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/postAuthor"
                    android:layout_below="@id/postTitle"
                    android:layout_marginTop="3dp"
                    android:text="@string/layout_author"
                    android:gravity="center"/>

            </RelativeLayout>

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/postLoadingProgressBar"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/commentsLoadingProgressBar"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/progressText"
            android:layout_alignBottom="@id/commentsLoadingProgressBar"
            android:layout_alignRight="@id/commentsLoadingProgressBar"
            android:layout_alignLeft="@id/commentsLoadingProgressBar"
            android:layout_alignTop="@id/commentsLoadingProgressBar"
            android:text="@string/layout_loading_comments"
            android:textStyle="bold"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/commentsHeadingRelativeLayout"
            android:id="@+id/commentsListView">

        </ListView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>